--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <div id="app">
-    <input type="text" v-model="someStr">
-    <input type="text" v-model="child.someStr">
-    <p>{{ getHelloWord }}</p>
+    <input type="text" v-model="firstName">
+    <input type="text" v-model="child.lastName">
+    <p>{{getFullName}}</p>
     <p v-html="htmlStr"></p>
-    <button v-on:click="clickBtn">Change</button>
+    <button v-on:click="handleBtnClick">Change</button>
 </div>
 
 <script src="./js/observer.js"></script>
@@ -21,26 +21,26 @@
     let vm = new MVVM({
         el: '#app',
         data: {
-            someStr: 'Hello ',
+            firstName: 'Hello ',
             className: 'btn',
             htmlStr: '<span style="color: blue;">blue</span>',
             child: {
-                someStr: 'World'
+                lastName: 'World'
             }
         },
         computed: {
-            getHelloWord() {
-                return this.someStr + this.child.someStr;
+            getFullName() {
+                return this.firstName + this.child.lastName;
             }
         },
         methods: {
-            clickBtn() {
-                const randomStrArr = ['Vue', 'React', 'Angular'];
-                this.child.someStr = randomStrArr[Math.floor(Math.random() * 3)];
+            handleBtnClick() {
+                const randomArr = ['Vue', 'React', 'Angular'];
+                this.child.lastName = randomArr[Math.floor(Math.random() * 3)];
             }
         }
     });
-    vm.$watch('child.someStr', function () {
+    vm.$watch('child.lastName', function () {
         console.log(arguments);
     });
 </script>
